Untouchable header buttons bug fixed
incorrect indexes caused overlapping header by navigation root.

--- a/src/Frontend/src/components/flashcards/Flashcards/flashcards.less
+++ b/src/Frontend/src/components/flashcards/Flashcards/flashcards.less
@@ -171,7 +171,7 @@
   }
 
   .overlay {
-    z-index: @overlayZIndex - 1;
+    z-index: @overlayZIndex - 2;
   }
 
   .secondModal {
